--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,7 @@
-<main class="main">
-  <div class="content">
-    <div class="left-side">
+<app-header></app-header>
 
-      <h1>Hello, {{ title }}</h1>
-      <p>Lets get started!</p>
-    </div>
 
-    <div class="right-side">
-    
-      </div>
-    </div>
+<p>Lets get started!</p>
 
-</main>
 
 <router-outlet />
