Header with logo added. Moved images to new "src/assets" folder instead "public". Added path to assets in angular.json file

--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -1,3 +1,8 @@
 <header>
-    <h1>TrackYourTask</h1>
+    <img src="assets/task-management-logo.png" alt="Logo with notepad"/>
+    <div>
+        <h1>TrackYourTask</h1>
+        <p>Easily manage your tasks without friction!</p>
+    </div>
+    
 </header>
