--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,14 @@
-<app-header></app-header>
+<app-header />
 
+<main>
+    <ul id="users">
+        <li>
+          <app-user />
+        </li>
 
-<p>Lets get started!</p>
+    </ul>
+</main>
+
 
 
 <router-outlet />
